Minor updates to styling including responsive fixes, bug that cut off part of the border on the Generate link in the main nav, and the tables for the generated workouts.

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -47,7 +47,9 @@ body {
     max-width:100% !important;
     margin:0 !important;
     padding:5px 0 !important;
-    top:45%;
+    top:50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
     text-align:center;
     display:block;
     text-shadow:0px 0px 5px #000;
@@ -63,6 +65,10 @@ body {
     margin:10px;
     cursor:pointer;
     padding: 10px 20px;
+}
+
+.home-button:hover {
+    background-color: #D4262C;
 }
 
 #nav {
@@ -167,6 +173,10 @@ body {
     border:1px solid black;
 }
 
+.generator label, .generator button {
+    display: block;
+}
+
 .generator select {
     -webkit-appearance:none;
     text-align: center;
@@ -177,6 +187,7 @@ body {
     border:1px solid #000;
     padding:3px 5px;
     cursor: pointer;
+    margin: 10px 10px 30px;
 }
 
 .generator input[type='checkbox'] {
@@ -203,6 +214,7 @@ body {
     border:1px solid black;
     margin:10px auto;
     text-align:center;
+    border-collapse: collapse;
 }
 
 .workout th, .workout tr, .workout td {
@@ -211,6 +223,16 @@ body {
 
 .workout th {
     font-weight: bold;
+    color: #fff;
+    background-color: #87161a;
+}
+
+.workout th, td {
+    padding: 5px;
+}
+
+.workout tr:nth-child(even) {
+    background-color: #f2f2f2;
 }
 
 @media (max-width: 1024px) {
@@ -222,7 +244,7 @@ body {
     #nav {
         float:none;
         display:block;
-        width:290px;
+        width:194px;
         margin:auto;
     }
 
